# neu-nautilus-extension-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
nautilus4-extension/: Cargo.toml
nautilus4-extension-sys/: Cargo.toml  README.md
nautilus4-extension-sys/src/: lib.rs
nautilus4-extension/src/: column_provider.rs  info_provider.rs  lib.rs  menu_provider.rs  nautilus_module.rs  property_page_provider.rs  translate.rs
