[package]
name = "nautilus4-extension"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Shu <talklittle@gmail.com>", "arrel <github.com/rlneumiller>"]
description = "Safe Rust wrapper for libnautilus-extension, to extend GNOME Nautilus file browser (aka Files in Ubuntu)"
repository = "https://github.com/rlneumiller/neu-nautilus4-extension-rs"
keywords = ["nautilus", "bindings", "gnome", "ubuntu", "GTK4"]
categories = ["api-bindings"]
license = "GPL-3.0"
readme = "../README.md"

[lib]
name = "nautilus4_extension"

[dependencies]
gio-sys = "0.22.0"
glib-sys = "0.22.6"
gobject-sys = "0.22.6"
gtk4-sys = "0.11.3"
# gtk-rs core bindings for GTK4
gtk4 = "0.11.3"
gio = "0.22.6"
glib = "0.22.7"
gtk4-macros = "0.11.0"
libc = "0.2.186"

# Nullable, Option, etc. interop helpers
glib-macros = "0.22.6"

# If the crate has been published on crates.io
#nautilus4-extension-sys = "0.1.0"

# Otherwise use the local crate
nautilus4-extension-sys = { path = "../nautilus4-extension-sys", version = "0.1.0" }